Updating list handling